2007-09-24  Benny Malengier <benny.malengier@gramps-project.org> 
	* src/DataViews/_EventView.py: no filter and column editor on event view, issue #1248

2007-09-24  Benny Malengier <benny.malengier@gramps-project.org> 
	* src/DisplayModels/_NoteModel.py: correct bug in unattached with filter

2007-09-23  Benny Malengier <benny.malengier@gramps-project.org> 
	* src/ArgHandler.py: from buglist, read recent file is broken in GRAMPS 30!
	DISABLE, this module must be cleaned completely before 3.0 !!

2007-09-23  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/plugins/WebCal.py:
	* src/plugins/NarrativeWeb.py:S
	Change const.image_dir to uppercase const.IMAGE_DIR

2007-09-20  Benny Malengier <benny.malengier@gramps-project.org> 
	* src/plugins/MarkerReport.py: localize fixed markers, issue #1137

2007-09-20  Benny Malengier <benny.malengier@gramps-project.org> 
	* src/RelLib/_Date.py: pylint and remove import of DateHandler as not 
	really needed and unwanted in RelLib.

2007-09-20  Benny Malengier <benny.malengier@gramps-project.org> 
	* src/Config/_GrampsConfigKeys.py: add config keys for fuzzy date match
	* src/RelLib/_CalSdn.py: correct type in comment
	* src/RelLib/_Date.py: add new match function to match two dates with 
	fuzzy date support (about 2000 matches about 2005).
	* src/Filters/Rules/_HasEventBase.py: use new match
	* src/Filters/Rules/MediaObject/_HasMedia.py: use new match
	* src/Filters/Rules/Person/_HasBirth.py: use new match
	* src/Filters/Rules/Person/_HasDeath.py: use new match
	* src/Filters/Rules/Person/_HasFamilyEvent.py: use new match
	* src/Filters/Rules/_RuleUtils.py: delete, contained old match date routines
	* src/Filters/Rules/Makefile.am: remove RuleUtils
	* po/POTFILES.in: remove RuleUtils
	Based on patch of Douglas S. Blank <dblank@cs.brynmawr.edu>, ticket #1219

2007-09-20  Benny Malengier <benny.malengier@gramps-project.org> 
	* src/DateHandler/_DateParser.py: apply rev 8351 to 3.0 branch: text date with correct modifier
