@@ -9,5 +9,6 @@ dist_pkgdata_DATA = \
 	mergedata.glade\
 	plugins.glade\
 	rule.glade\
-	scratchpad.glade
+	scratchpad.glade\
+	paper_settings.glade
 
